--- a/ckc-race-analyzer/src/styles/settings/_typography.scss
+++ b/ckc-race-analyzer/src/styles/settings/_typography.scss
@@ -4,11 +4,16 @@
 h1{
     font-size: 1.5rem;
     font-weight: 900;
+    text-transform: uppercase;
 
 }
 
 h2{
-    font-size: 3rem;
+    font-size: 2.5rem;
+    font-weight: 900;
+    text-transform:uppercase;
+    padding: 1rem 0;
+
 }
 
 h3{
