--- a/ckc-race-analyzer/src/styles/components/_button.scss
+++ b/ckc-race-analyzer/src/styles/components/_button.scss
@@ -2,6 +2,7 @@
 
 
 .button {
+    font-family: $font-stack;
     padding: 0.5rem 1.5rem;
     background-color: $primary-color;
     font-size: 1rem;
@@ -10,7 +11,8 @@
     border: none;
     border-radius: 50px;
     cursor: pointer;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;  }
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+  }
 
   .button:disabled {
     background-color: #ccc;
