--- a/ckc-race-analyzer/src/styles/components/_multistep.scss
+++ b/ckc-race-analyzer/src/styles/components/_multistep.scss
@@ -1,8 +1,6 @@
 @use '../settings/variables' as *;
 
-
 .multistep {
-
   position: relative;
   width: 100%;
   height: 100vh;
@@ -11,6 +9,7 @@
   justify-content: center;
   align-items: center;
   padding: 7.5rem 0;
+
   &-item {
     padding: 5rem 0;
     .input {
@@ -25,8 +24,8 @@
 
   &-timetable {
     width: 100%;
-    // max-width: 30rem;
     height: auto;
+    max-height: 23rem;
     padding: 2rem;
     margin: 2rem 0;
     overflow-y: scroll;
@@ -45,16 +44,17 @@
       border-radius: 20px;
     }
   }
+
   &-time {
     .input {
       width: 100%;
       border-radius: 20px;
       border: none;
-      box-shadow:
-        rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
-        rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+      box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+
     }
   }
+
   &-nav {
     position: absolute;
     bottom: 20%;
@@ -62,12 +62,58 @@
     height: auto;
     padding: 0 5rem;
   }
+  &-slider {
+    display: flex;
+    justify-content: center;
+    height: 100vh;
+  }
+
+  &-slide {
+    max-width: 500px;
+  }
 }
 
+.swiper-slide {
+  display: flex;
+  justify-content: center;
+}
 
-.pitstop{
-  img{
+.pitstop {
+  img {
     width: 1.5rem;
     height: 1.5rem;
+  }
+
+  &-times {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 10px;
+    width: 100%;
+    max-width: 350px;
+    padding: 1rem;
+  }
+  &-time {
+    flex: 0 0 calc(50% - 5px); /* 2 items per row with gap accounted for */
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    max-width: 10rem;
+    color: white;
+    border-radius: 10px;
+    padding: 1rem 2rem;
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+
+
+    &-go {
+      background-color: #8fc0a9;
+    }
+    &-risky {
+      background-color: $secondary-color;
+    }
+    &-cancel {
+      background-color: #f54200;
+    }
   }
 }
